client/layouts/FullLayout.scss
@import "../variables.scss";

.FullLayout {
  position: absolute;
  min-height: 100%;
  width: 100%;

  & > header {
    background-color: $dark;
    line-height: 28px;
    margin-bottom: 20px;
  }

  a.logo {
    text-decoration: none;

    &:focus {
      outline: none;
    }
  }

  .Logo {
    height: 256px;

    text {
      fill: white;
    }
  }

  .pageContent {
    position: relative;
    text-align: center;
  }
}

